Fix path of IPyrate

--- a/Docs/NewsInPyR@TE-1.2.0.ipynb
+++ b/Docs/NewsInPyR@TE-1.2.0.ipynb
@@ -159,7 +159,7 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "Querry: Casimir SU2 [2]\n"
+        "Query: Casimir SU2 [2]\n"
        ]
       },
       {
@@ -174,7 +174,7 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "Querry: AdjR SU4\n"
+        "Query: AdjR SU4\n"
        ]
       },
       {
@@ -189,7 +189,7 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "Querry: Dynkin SU3 [1,0]\n"
+        "Query: Dynkin SU3 [1,0]\n"
        ]
       },
       {
@@ -204,7 +204,7 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "Querry: FondR SU5\n"
+        "Query: FondR SU5\n"
        ]
       },
       {
@@ -219,7 +219,7 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "Querry: GetDynk SU2 [2,True]\n"
+        "Query: GetDynk SU2 [2,True]\n"
        ]
       },
       {
@@ -234,7 +234,7 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "Querry: GetDynk SU2 2\n"
+        "Query: GetDynk SU2 2\n"
        ]
       },
       {
@@ -249,7 +249,7 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "Querry: DimR SU3 [1,0]\n"
+        "Query: DimR SU3 [1,0]\n"
        ]
       },
       {
@@ -264,7 +264,7 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "Querry: exit\n"
+        "Query: exit\n"
        ]
       },
       {
@@ -368,7 +368,7 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "Querry: Matrices SU2 [2]\n"
+        "Query: Matrices SU2 [2]\n"
        ]
       },
       {
@@ -393,7 +393,7 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "Querry: exit\n"
+        "Query: exit\n"
        ]
       },
       {
@@ -573,7 +573,7 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "Querry: Invariants SU2 [[1,True],[1],[1,True],[1]]\n"
+        "Query: Invariants SU2 [[1,True],[1],[1,True],[1]]\n"
        ]
       },
       {
@@ -594,7 +594,7 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "Querry: exit\n"
+        "Query: exit\n"
        ]
       },
       {
@@ -674,7 +674,7 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "Querry: Invariants SU2 [[2,True],[2],[2,True],[2]]\n"
+        "Query: Invariants SU2 [[2,True],[2],[2,True],[2]]\n"
        ]
       },
       {
@@ -698,7 +698,7 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "Querry: exit\n"
+        "Query: exit\n"
        ]
       },
       {
@@ -958,7 +958,7 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "Querry: Invariants SU2 [[1,True],[2],[2,True],[1]]\n"
+        "Query: Invariants SU2 [[1,True],[2],[2,True],[1]]\n"
        ]
       },
       {
@@ -979,7 +979,7 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "Querry: exit\n"
+        "Query: exit\n"
        ]
       },
       {
