Updated README with v2.0.0 specifics and clean up the imports in the different source files

--- a/README
+++ b/README
@@ -1,3 +1,12 @@
+This is the README file of PyR@TE version 2.0.0
+
+New in v2.0.0:
+• The full kinetic mixing is now available including all the two-loop corrections.
+• The group theory is now handled by the PyLie module that was developped for this purpose. It is a python re-write of the relevant Mathematica routines of Susyno (R. Fonseca). This has the double advantage to remove the large database from the source files and to allow the use of potentially arbitrary fields irreps. Note that there is still a database, CGCs.pklz which is being populated as the user uses PyR@TE to allow even faster execution.
+• We made available the anamalous dimension for the scalar and fermion fields to two-loop.
+
+----------
+
 This is the README file of PyR@TE version 1.1.4 and onward. 
 
 The PyR@TE project is now managed by git.
