--- a/README
+++ b/README
@@ -8,6 +8,15 @@ New in v2.0.0:
 Dependencies for v2.0.0:
 
 SymPy v1.0.0, NumPy, PyYaml
+
+Download:
+
+• We recommend to clone the git repository:
+
+git clone --recursive https://github.com/dibus2/Pyrate/
+
+Note that the --recursive option is necessary to clone the submodule Pylie.
+
 ----------
 
 This is the README file of PyR@TE version 1.1.4 and onward. 
